# amazeing

./: .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: pages.yml
amazeing/: Cargo.toml  build.rs
amazeing-app/: Cargo.toml
amazeing-app/src/: bsf.rs  cli.rs  dsf.rs  gui.rs  main.rs  solve.rs
amazeing-app/src/solver/: mod.rs
amazeing-app/src/solver/cli/: a_star.rs  bfs.rs  dfs.rs  dijkstra.rs  formatter.rs  mod.rs
amazeing-app/src/solver/gui/: a_star.rs  bfs.rs  dfs.rs  dijkstra.rs  draw.rs  mod.rs
amazeing-app/src/solver/matrix/: cli_viz.rs  loader.rs  mod.rs
amazeing-app/src/square/: cli_viz.rs  mod.rs
amazeing-bin/: Cargo.toml
amazeing-bin/src/: generate.rs  help.rs  main.rs  params.rs
amazeing-bin/src/cli/: args.rs  mod.rs  update_context.rs
amazeing-bin/src/command/: args.rs  color_scheme.rs  generate.rs  get_contexts.rs  help.rs  heuristic.rs  loader.rs  mod.rs  mode.rs  params.rs  parse_colorscheme.rs  parse_node.rs  proc.rs  solve.rs  update_context.rs  view.rs  visualize.rs
amazeing-bin/src/context/: color_context.rs  colors.rs  common.rs  contexts.rs  draw_context.rs  generation_context.rs  generator_context.rs  mod.rs  modify_context.rs  realtime_context.rs  simulation_context.rs  solve_context.rs  solver_context.rs  view_context.rs  visualize_context.rs
amazeing-bin/src/display/: mod.rs
amazeing-bin/src/display/action/: mod.rs  quit.rs  read_source_destination.rs
amazeing-bin/src/display/drawer/: draw_maze.rs  draw_node.rs  draw_path.rs  draw_traversed.rs  get_conf.rs  mod.rs
amazeing-bin/src/display_loop/: generate_simulation_loop.rs  mod.rs  solve_loop.rs  solve_simulation_loop.rs  update_loop.rs
amazeing-bin/src/generator/: draw.rs  generate.rs  manual.rs  mod.rs  visualize.rs
amazeing-bin/src/generator/manual/: draw.rs  manual.rs  mod.rs
amazeing-bin/src/helper/: draw_maze.rs  dumper.rs  file.rs  get_heuristic.rs  get_node.rs  loader.rs  mod.rs  random_node.rs  read_source_destination.rs  run_algorithm.rs
amazeing-bin/src/helper/drawer/: draw_node.rs  draw_traversed.rs
amazeing-bin/src/matrix/: dumper.rs  loader.rs
amazeing-bin/src/mode/: generate.rs  mod.rs  modify.rs  realtime.rs  simulation.rs  solve.rs  solve_simulate.rs  visualize.rs
amazeing-bin/src/solver/: display_loops.rs  draw.rs  mod.rs  realtime.rs  simulation.rs  solve.rs
amazeing-bin/src/ui/: generate_loop.rs  generate_simulate.rs  mod.rs  modify.rs  solve.rs  solve_simulate.rs  update.rs  view.rs  visualize.rs
amazeing-core/: Cargo.toml
amazeing-core/src/: lib.rs
amazeing-generator/: Cargo.toml
amazeing-generator/src/: gen.rs
amazeing-solver/: Cargo.toml
amazeing-solver/src/: arg_parser.rs  help.rs  main.rs  solve.rs
amazeing/src/: lib.rs  main.rs
amazeing/src/command/: args.rs  args_impl.rs  get_contexts.rs  mod.rs
amazeing/src/context/: color_context.rs  color_scheme.rs  create_context.rs  draw_context.rs  solve_context.rs  view_context.rs
amazeing/src/display_loop/: generate_loop.rs  generate_simulation_loop.rs  mod.rs  solve_loop.rs  solve_simulation_loop.rs  update_loop.rs  view_loop.rs
amazeing/src/generator/matrix/: mod.rs  traverse.rs
amazeing/src/helper/: color_gradient.rs  draw_maze.rs  file.rs  frame_rate.rs  get_node.rs  maze_to_texts.rs  mazes.rs  mod.rs  path_to_trace.rs  read_node.rs  read_source_destination.rs  reconstruct_path.rs  run_algorithm.rs  time.rs  validation.rs
amazeing/src/matrix/: generator.rs  helper.rs  maze.rs  mod.rs  neighbour.rs  solver.rs
amazeing/src/matrix/generator/: bfs.rs  dfs.rs  mod.rs
amazeing/src/matrix/helper/: mod.rs  reconstruct_path.rs  validation.rs
amazeing/src/matrix/maze/: mod.rs  neighbour.rs
amazeing/src/matrix/solver/: common.rs  mod.rs  traverse.rs  weighted_traverse.rs
amazeing/src/maze/matrix/: heuristics.rs  maze.rs  maze_index.rs  mod.rs  neighbour.rs
amazeing/src/solver/matrix/: common.rs  heuristics.rs  maze.rs  maze_index.rs  mod.rs  neighbour.rs  traverse.rs  weighted_traverse.rs
amazeing/src/structure/: mod.rs  queue.rs  stack.rs  types.rs
assets/: scheme-generator.html
assets/colorscheme/: 1.toml  2.toml  3.toml  blue.toml
assets/maze/: 001_005_005.maze  001_005_005_square.maze  (+61 more)
contrib/: scheme-generator.html
crates/amazeing/: Cargo.toml  build.rs
crates/amazeing/src/: main.rs
crates/amazeing/src/command/: args.rs  args_impl.rs  get_contexts.rs  mod.rs
crates/amazeing/src/context/: create_context.rs  draw_context.rs  solve_context.rs
crates/amazeing/src/display_loop/: generate_loop.rs  generate_simulation_loop.rs  solve_loop.rs  solve_simulation_loop.rs  update_loop.rs
crates/amazeing/src/helper/: draw_maze.rs  file.rs  frame_rate.rs  get_node.rs  mazes.rs  read_node.rs  run_algorithm.rs
libamazeing/: Cargo.toml
maze-app/: Cargo.toml
maze-core/: Cargo.toml
src/: app.rs  lib.rs  main.rs  util.rs  utility.rs
tests/: integration_tests.rs
(+269 files in other folders)
