[package]
name = "amazeing"
version = "0.7.5"
authors = ["indrajit"]
edition = "2024"
rust-version = "1.87.0"
description = "Amazeing is a maze generator/solver application with simulation/visualization."
documentation = "https://docs.rs/amazeing"
readme = "README.md"
homepage = "https://eendroroy.github.io/amazeing"
repository = "https://github.com/eendroroy/amazeing"
license = "AGPL-3.0"
keywords = ["maze"]
categories = ["algorithms", "visualization"]

[dependencies]
macroquad = "0.4.14"
toml = "0.9.6"
serde = { version = "1.0.225", features = ["derive"] }
clap = { version = "4.5.47", features = ["color", "derive"] }
rand = "0.9.1"

[build-dependencies]
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.58"

[[bin]]
name = "amazeing"
path = "src/main.rs"