[package]
name = "amazeing"
version = "0.7.6"
authors = ["indrajit"]
edition = "2024"
rust-version = "1.90.0"
description = "Amazeing is a maze generator/solver application with simulation/visualization."
documentation = "https://docs.rs/amazeing"
readme = "README.md"
homepage = "https://eendroroy.github.io/amazeing"
repository = "https://github.com/eendroroy/amazeing"
license = "AGPL-3.0"
keywords = ["maze"]
categories = ["algorithms", "visualization"]

[dependencies]
bevy = "0.17.2"

[[bin]]
name = "amazeing"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
