[package]
name = "amazeing"
version = "0.9.0"
authors = ["indrajit"]
edition = "2024"
rust-version = "1.95.0"
description = "Amazeing is a maze generator/solver application with simulation/visualization."
documentation = "https://docs.rs/amazeing"
readme = "README.md"
homepage = "https://eendroroy.github.io/amazeing"
repository = "https://github.com/eendroroy/amazeing"
license = "AGPL-3.0"
keywords = ["maze"]
categories = ["algorithms", "visualization"]

[dependencies]
macroquad = "0.4"
toml = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["color", "derive"] }
rand = "0.10"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[[bin]]
name = "amazeing"
path = "src/main.rs"