[package]
name = "amazeing-app"
version = "0.1.0"
edition = "2021"

[dependencies]
amazeing-core = { version = "*", path = "../amazeing-core" }
colored = "3.0.0"
macroquad = "0.4.13"

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "dfs"
path = "src/dsf.rs"

[[bin]]
name = "bfs"
path = "src/bsf.rs"