[package]
name = "amazeing-bin"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
amazeing = { version = "*", path = "../amazeing" }
macroquad = "0.4.13"
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.32", features = ["color", "derive"] }

[[bin]]
name = "amazeing"
path = "src/main.rs"
