[package]
name = "amazeing"
version = "0.3.1"
edition = "2024"
rust-version = "1.86.0"

[dependencies]
libamazeing = { version = "*", path = "../libamazeing" }
macroquad = "0.4.14"
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.35", features = ["color", "derive"] }

[build-dependencies]
clap = { version = "4.3.0", features = ["derive"] }
clap_complete = "4.5.47"
clap_mangen = "0.2.26"

[[bin]]
name = "amazeing"
path = "src/main.rs"
